# siamese-network

./: README.md  pyproject.toml
siamese_network/: base_siamese_model.py  minilm_siamese_dual_handle.py  text_utils.py
