[project]
name = "siamese-network"
version = "0.1.0"
description = "Implementation of Sentence-BERT based on siamese network"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "bs4>=0.0.2",
    "emoji>=2.14.0",
    "lxml>=5.3.0",
    "regex>=2024.11.6",
    "torch==1.10.0",
    "transformers==4.20.0",
    "unidecode>=1.3.8",
]
